Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,11 @@ steps:
     goals: 'package'
 - task: CopyFiles@2
   inputs:
+    SourceFolder: '/home/vsts/work/1/s/webapp/target/webapp.war'
     Contents: '**/.war'
     TargetFolder: '/home/vsts/work/1/a'
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'ok'
+    PathtoPublish: '/home/vsts/work/1/a'
+    ArtifactName: 'hi'
     publishLocation: 'Container'
